# QmlNetDebugger

./: README.md
client/: CMakeLists.txt  README.md  resources.qrc
client/resources/qml/: ConnectionDialog.qml
client/src/: connectiondialog.cpp  connectiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  qmlnetworkloader.cpp  qmlnetworkloader.h  settings.cpp  settings.h
server/: README.md  go.mod  go.sum  main.go
server/internal/config/: config.go
server/internal/handlers/: handlers.go  sse.go
server/internal/middleware/: middleware.go
server/internal/models/: models.go
server/internal/watcher/: watcher.go
server/qml/: main.qml
server/test-qml/: main.qml
server/test-qml/components/: Button.qml
